Version 1.7.0-svn:
 * General:
   * The add-ons directory, <preferences>/data/campaigns, has been renamed
     and it is now <preferences>/data/add-ons
   * Added --rng-seed command line option to specify a value to seed the random
     number generator with.
 * AI:
   * Fixed incorrect handling of poisoning attacks when suggesting best attack
     in user interface
   * Added basic history and hot-redeployment capabilities to in-game console.
   * Changed AI Lifecycle handling. Console AI is now persistent between 
     invocations.
   * Added AI Arena test map to test AIs in interactive mode ( ai_arena_small )
   * Changed interaction between default AI and Formula AI - made default AI
     fallback to formula recruitment if "recruitment" config option is set in
     AI config.
 * Campaigns:
   * Delfador's Memoirs:
     * New campaign added to mainline from the Wesnoth-UMC-Dev repository.
       (Novice level, 24 scenarios)
   * Under the Burning Suns:
     * Kaleh advancement:
       * Gave the Hero variation more HP.
       * Reduced XP requirements for the Captain variation.
       * Disabled the sword2 (and thus armor) AMLA for the Captain variation.
       * Enabled the bolas AMLA for all variations.
       * Added the camouflage AMLA back.
 * Editor2:
   * New feature: exporting of selection coordinates to system clipboard
   * Made auto terrain transition mode tri-state: on (editor2's on), partial
     (1.4 editor's on / editor2's off) and off (1.4's off).
   * Made "wesnoth -e FILE" work like "wesnoth -e --load FILE" (load the map)
   * Made "wesnoth -e --load DIR" (and consequently "wesnoth -e DIR") set
     DIR as the default map directory for the current session, and start with 
     the map load dialog open
   * Added ability to load maps referenced in scenario files
   * Added ability to work with maps embedded in scenario files (saving works 
     in a limited scope)
   * Moved the clipboard actions to a context menu available in paste mode